dsl2/src/test/resources/parsing/invalid/bad_type/bad_array_get.uss
var a = [1, 2, 3];
string v = a[0];